Added Discord Timestamp Generator

--- a/index.html
+++ b/index.html
@@ -143,6 +143,14 @@
   </div>
 </div>
 
+<div class="secondary-container">
+    <div class="tools">
+        <h1>Discord Timestamp Generator</h1>
+        <p>Use this tool to create markdown text which displays times in each user's local timezone. Just input a time and copy the markdown below into Discord.</p>
+        <a href="discord-timestamp.html">Discord Timestamp Generator</a>
+    </div>
+</div>
+
 
 
     <global-footer></global-footer>
